developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_contextex_cannot_reference_nul.kmn
store(&TARGETS) 'any'

begin Unicode > use(main)

store(cons) 'bcd'

group(main) using keys

c ERROR_ContextExCannotReferenceNul:
nul any(cons) + 'a' > 'x' context(1)
